# Agma

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/game/: mod.rs  rift.rs
client/src/networking/: handshake_thread.rs  mod.rs  player_thread.rs
client/src/rendering/: animation.rs  camera.rs  cube.rs  fragment.glsl  mod.rs  model_shader.rs  model_vertex.rs  new_camera.rs  render_state.rs  skinned_animation.rs  skinned_shader.rs  skinned_vertex.glsl  skinned_vertex.rs  textured_fragment.glsl  textured_shader.rs  textured_vertex.glsl  textured_vertex.rs  tpose.rs  ui_render_state.rs  vertex.glsl
client/src/resources/animations/: Attack.glb  Running.glb  cube.gltf  fulltime.glb  layered_animation.glb  simple_pos.glb  simple_pose.gltf
server/: Cargo.toml
server/src/: main.rs
server/src/components/: mod.rs  player_connection_component.rs
server/src/server_managers/: mod.rs  server_handshake_manager.rs
shared_code/: Cargo.toml  build.rs
shared_code/src/: attribute_component.rs  champion_component.rs  component.rs  entity.rs  lib.rs  macros.rs  messages.rs  movement_system.rs  player_connection_component.rs  replication_component.rs  sphere.rs  transform_componenet.rs  util.rs  vector_math.rs  world.rs
shared_code/src/abilities/: ability_instance.rs  autoattack_ability.rs  mod.rs  movement_ability.rs
shared_code/src/ability_target_functions/: autoattack_target_validator.rs  mod.rs  target_is_position.rs
shared_code/src/components/: abilities_component.rs  attack_state_component.rs  autoattack_component.rs  champion_component.rs  character_state_component.rs  entity_component.rs  health_component.rs  inventory_component.rs.rs  minion_component.rs  mod.rs  movement_state_component.rs  position_component.rs  radius_component.rs  team_component.rs  transform.rs  zombie_controller_component.rs
shared_code/src/runes/: damage_rune.rs  mod.rs  move_rune.rs  rune.rs
