[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_code = { version = "0.1.0", path = "../shared_code" }
bincode = "2.0.0-rc.1"
cgmath = { version = "0.18.0", features = ["serde"] }
log = "0.4"