[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
shared_code = { version = "0.1.0", path = "../shared_code" }
serde_json = "1.0"
cgmath = "*"
log = "0.4"
simple-logging = "2.0.2"
bitfield-rle = "0.2.0"
rmp-serde = "1.0.0"
bincode = "2.0.0-rc.1"
rand = "*"