[package]
name = "shared_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "2.0.0-rc.1", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["serde"] }