[package]
name = "shared_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slotmap = {version = "1.0", features = ["serde"]}
erased-serde = "0.3"
log = "0.4"
simple-logging = "2.0.2"
bincode = "2.0.0-rc.1"
cgmath = "*"
bitfield-rle = "0.2.0"
rand = "*"